AC_INIT(configure.ac)
AM_INIT_AUTOMAKE(SampleApp, 0.1)
AM_CONFIG_HEADER(config.h)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(OGRE, [OGRE >= 1.2])
AC_SUBST(OGRE_CFLAGS)
AC_SUBST(OGRE_LIBS)

PKG_CHECK_MODULES(OIS, [OIS >= 1.0])
AC_SUBST(OIS_CFLAGS)
AC_SUBST(OIS_LIBS)

PKG_CHECK_MODULES(bullet, [bullet >= 2.79])
AC_SUBST(bullet_CFLAGS)
AC_SUBST(bullet_LIBS)

PKG_CHECK_MODULES(CEGUI, [CEGUI >= 0.7.6])
AC_SUBST(CEGUI_CFLAGS)
AC_SUBST(CEGUI_LIBS)

PKG_CHECK_MODULES(sdl, [sdl >= 1.2.14])
AC_SUBST(sdl_CFLAGS)
AC_SUBST(sdl_LIBS)

PKG_CHECK_MODULES(SDL_mixer, [SDL_mixer >= 1.2.10])
AC_SUBST(SDL_mixer_CFLAGS)
AC_SUBST(SDL_mixer_LIBS)

PKG_CHECK_MODULES(SDL_net, [SDL_net >= 1.2.8])
AC_SUBST(SDL_net_CFLAGS)
AC_SUBST(SDL_net_LIBS)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
